video list spacing and font fixes

--- a/blocks/mini-cards/mini-cards.css
+++ b/blocks/mini-cards/mini-cards.css
@@ -89,6 +89,7 @@
   padding-block-start: unset;
   padding-bottom: var(--spacing-regular);
   border-bottom: 2px solid var(--neutral-solid-10-s);
+  gap: var(--spacing-regular);
 }
 
 .image-list-variation .mini-card-title {
